--- a/detox_1d(11-20)/detox-1d-6/index.html
+++ b/detox_1d(11-20)/detox-1d-6/index.html
@@ -16,19 +16,19 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">
+    <header class="header">
 			<div class="header__container">
-				<div class="header__call-wrapper">
+				<a href="tel:8447227147" class="header__call-wrapper">
 					<div class="header__call call">
 						<i class="call__icon">
 							<img src="./img/phone.svg" alt="phone">
 						</i>
 						<div class="call__body">
 							<span class="call__text">Call us Today</span>
-							<a href="tel:8447227147" class="call__link">(844) 722-7147</a>
+							<span class="call__link">(844) 722-7147</span>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		</header>
 		<main class="page">
