--- a/detox_1e/detox-1e-group-1-var-2/index.html
+++ b/detox_1e/detox-1e-group-1-var-2/index.html
@@ -6,19 +6,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>detox-1e-group-1-var-2</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css?v=20241022105546">
+  <script>
+    function handleSubmit(event) {
+        event.preventDefault();
+        window.location.href = 'tel:8447227147';
+    }
+</script>
 </head>
 
 <body>
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container">
-				<a href="tel:1234567890" class="header__call call">
+				<a href="tel:8447227147" class="header__call call">
 					<i class="call__icon ibg ibg_contain">
 						<img width="60" height="60" loading="lazy" src="./img/phone.svg" alt="phone">
 					</i>
 					<div class="call__body">
 						<span class="call__text">Get Help Now</span>
-						<span class="call__link">(123) 456-7890</span>
+						<span class="call__link">(844) 722-7147</span>
 					</div>
 				</a>
 			</div>
